# iot-hub-c-raspberrypi-client-app

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bme280.c  bme280.h  config.h  main.c  parson.c  parson.h  setup.sh  telemetry.c  telemetry.h  wiring.c  wiring.h
